Fixed home dropdown padding overflow-x issue.

--- a/static/sass/BV_home_page.sass
+++ b/static/sass/BV_home_page.sass
@@ -25,7 +25,7 @@ body
 		position: absolute !important
 		transform: none !important
 		top: unset !important
-		right: -21px !important
+		right: -20px !important
 
 ///////////////////////////////////////////////////////////////////////////////
 // Media Queries
